@@ -97,6 +97,10 @@
 # be queued until the first limit is reached.
 #max_queued_bytes 0
 
+# Set the maximum QoS supported. Clients publishing at a QoS higher than
+# specified here will be disconnected.
+#max_qos 2
+
 # The maximum number of QoS 1 and 2 messages to hold in a queue per client
 # above those that are currently in-flight.  Defaults to 1000. Set
 # to 0 for no maximum (not recommended).
