@@ -83,7 +83,7 @@ struct mosquitto *context__init(mosq_sock_t sock)
 	context->msgs_out.inflight_maximum = db.config->max_inflight_messages;
 	context->msgs_in.inflight_quota = db.config->max_inflight_messages;
 	context->msgs_out.inflight_quota = db.config->max_inflight_messages;
-	context->maximum_qos = 2;
+	context->max_qos = 2;
 #ifdef WITH_TLS
 	context->ssl = NULL;
 #endif
