@@ -314,6 +314,9 @@ void do_disconnect(struct mosquitto *context, int reason)
 					case MOSQ_ERR_NOMEM:
 						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected due to out of memory.", id);
 						break;
+					case MOSQ_ERR_NOT_SUPPORTED:
+						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected due to QoS too high or retain not supported.", id);
+						break;
 					case MOSQ_ERR_ADMINISTRATIVE_ACTION:
 						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s been disconnected by administrative action.", id);
 						break;
